--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["es2015"]
+  "presets": ["es2015"],
+  "plugins": [
+    "transform-object-rest-spread",
+    "syntax-object-rest-spread",
+    "transform-es3-property-literals",
+    "transform-es3-member-expression-literals"
+  ]
 }
