feat(karma): Config file

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "transform-object-rest-spread",
     "syntax-object-rest-spread",
     "transform-es3-property-literals",
-    "transform-es3-member-expression-literals"
+    "transform-es3-member-expression-literals",
+    ["transform-es2015-for-of", {"loose": true}],
   ]
 }
