feat(test): Unit tests working

--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,6 @@
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
     ["transform-es2015-for-of", {"loose": true}],
+    [ "__coverage__", { "ignore": ["node_modules/", "test/"] } ]
   ]
 }
