--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,6 @@
     "syntax-object-rest-spread",
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
-    ["transform-es2015-for-of", {"loose": true}],
-    [ "__coverage__", { "ignore": ["node_modules/", "test/"] } ]
+    ["transform-es2015-for-of", {"loose": true}]
   ]
 }
