--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "babel-eslint": "^6.0.4",
+    "beaver-logger": "^1.0.11",
     "es6-promise": "^3.1.2",
     "es6-promise-min": "^2.0.1",
     "post-robot": "^2.0.0",
