--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "checkout-components",
+  "name": "ppxo",
   "version": "4.0.5",
   "description": "Checkout components, for integratng checkout products.",
   "main": "index.js",
