Wait for onAuthorize and onCancel to complete before closing Checkout

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "syntax-object-rest-spread",
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
+    "transform-decorators-legacy",
     ["transform-es2015-for-of", {"loose": true}]
   ]
 }
