--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "Base64": "^1.0.0",
     "babel-eslint": "^6.0.4",
     "beaver-logger": "^2",
+    "es6-iterator": "^2.0.0",
     "es6-promise": "^3.1.2",
     "es6-promise-min": "^2.0.1",
     "es6-symbol": "^3.1.0",
