--- a/.eslintrc
+++ b/.eslintrc
@@ -82,7 +82,7 @@
         "no-case-declarations": 0,
         "no-div-regex": 2,
         "no-else-return": 0,
-        "no-empty-function": 1,
+        "no-empty-function": 2,
         "no-empty-pattern": 0,
         "no-eq-null": 2,
         "no-eval": 2,
@@ -146,7 +146,7 @@
         "no-undef": 2,
         "no-undefined": 0,
         "no-unused-vars": [2, {"vars": "all", "args": "none"}],
-        "no-use-before-define": 1,
+        "no-use-before-define": 2,
 
         // node.js
         "callback-return": 0,
@@ -184,7 +184,7 @@
         "max-len": [0, 80, 4],
         "max-nested-callbacks": [0, 2],
         "max-params": [1, 5],
-        "max-statements": [1, 30],
+        "max-statements": 0,
         "new-cap": 2,
         "new-parens": 2,
         "newline-after-var": 0,
@@ -257,7 +257,7 @@
         // require method and property shorthand syntax for object literals
         "object-shorthand": 1,
         // suggest using arrow functions as callbacks
-        "prefer-arrow-callback": 1,
+        "prefer-arrow-callback": 2,
         // suggest using of const declaration for variables that are never modified after declared
         "prefer-const": 0,
         "prefer-rest-params": 0,
