--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Checkout components, for integratng checkout products.",
   "main": "index.js",
   "scripts": {
-    "test": "eslint src"
+    "test": "gulp test",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2"
   },
   "repository": {
     "type": "git",
@@ -36,14 +37,18 @@
     "babel-plugin-transform-es2015-for-of": "^6.8.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "es6-symbol": "^3.0.2",
     "eslint": "^2",
+    "eslint-plugin-flowtype": "^2.29.1",
+    "flow-bin": "^0.37.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-karma": "0.0.5",
+    "gulp-shell": "^0.5.2",
     "gulp-webpack": "^1.5.0",
     "gulp-webserver": "^0.9.1",
     "istanbul-instrumenter-loader": "^0.2.0",
