Do not allow any type

--- a/.eslintrc
+++ b/.eslintrc
@@ -290,7 +290,11 @@
             "never"
         ],
         "flowtype/no-primitive-constructor-types": 2,
-        "flowtype/no-weak-types": 0,
+        "flowtype/no-weak-types": [2, {
+            "any": true,
+            "Object": false,
+            "Function": false
+        }],
         "flowtype/object-type-delimiter": [
             2,
             "comma"
