--- a/.flowconfig
+++ b/.flowconfig
@@ -2,8 +2,9 @@
 ./node_modules/gulp-flowtype
 [include]
 [libs]
-src/decs.js
+src/types.js
 [options]
+module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
 unsafe.enable_getters_and_setters=true
 experimental.const_params=false
 esproposal.export_star_as=enable
