--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ node_js:
    - "6"
 before_script:
   - npm install -g gulp
+  - npm install -g flow-typed
+  - flow-typed install
 script: gulp test
