--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
+    "karma-slimerjs-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
