--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015"],
+  "presets": [ "es2015", "react" ],
   "plugins": [
     "transform-flow-strip-types",
     "transform-object-rest-spread",
