--- a/package.json
+++ b/package.json
@@ -83,12 +83,22 @@
   "dependencies": {
     "Base64": "^1.0.0",
     "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-register": "^6.22.0",
     "beaver-logger": "^2",
+    "braintree": "^2.0.0",
+    "cookie-parser": "^1.4.3",
     "es6-iterator": "^2.0.0",
     "es6-promise": "^3.1.2",
     "es6-promise-min": "^2.0.1",
     "es6-symbol": "^3.1.0",
+    "express": "^4.14.1",
     "post-robot": "^4.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "request": "^2.79.0",
     "xcomponent": "^1.0.3"
   }
 }
