--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-plugin-flow-runtime": "^0.3.0",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -44,10 +45,16 @@
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "chai": "^3.5.0",
     "eslint": "^2",
     "eslint-plugin-flowtype": "^2.29.1",
     "flow-bin": "^0.37.0",
+    "flow-runtime": "^0.3.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-karma": "0.0.5",
@@ -73,6 +80,7 @@
     "mocha": "^2.5.3",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
+    "regenerator-runtime": "^0.10.1",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "text-loader": "0.0.1",
