Set up demo app to be mounted on other express servers

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "files": [
     "dist/checkout.lib.js",
     "dist/checkout.lib.js.map",
-    "src/"
+    "src/",
+    "demo/"
   ],
   "repository": {
     "type": "git",
