--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "paypal-checkout",
   "version": "4.0.42",
-  "description": "Checkout components, for integratng checkout products.",
+  "description": "PayPal Checkout components, for integrating checkout products.",
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
