--- a/package.json
+++ b/package.json
@@ -25,12 +25,7 @@
     "krakenjs",
     "kraken"
   ],
-  "licenses": [
-    {
-      "type": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-    }
-  ],
+  "license" : "Apache-2.0",
   "readmeFilename": "README.md",
   "devDependencies": {
     "babel-core": "^6.7.7",
