--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "postinstall": "rm -r node_modules/gulp-flowtype/node_modules/flow-bin"
   },
   "files": [
     "dist/checkout.lib.js",
@@ -49,12 +49,12 @@
     "chai": "^3.5.0",
     "eslint": "^2",
     "eslint-plugin-flowtype": "^2.29.1",
-    "flow-bin": "^0.37.0",
+    "flow-bin": "^0.41.0",
     "flow-runtime": "^0.5.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-flowtype": "^1.0.0",
     "gulp-karma": "0.0.5",
-    "gulp-shell": "^0.5.2",
     "gulp-webpack": "^1.5.0",
     "gulp-webserver": "^0.9.1",
     "istanbul-instrumenter-loader": "^0.2.0",
