Add postinstall script to npm package

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dist/checkout.lib.js",
     "dist/checkout.lib.js.map",
     "src/",
-    "demo/"
+    "demo/",
+    "postinstall.js"
   ],
   "repository": {
     "type": "git",
