--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": [ "es2015", "stage-2", "react" ],
+    "presets": [ [ "es2015", { "modules": false } ], "react" ],
     "plugins": [
         "transform-flow-strip-types",
         "transform-object-rest-spread",
