--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-add-module-exports": "^0.1.4",
     "babel-plugin-flow-runtime": "^0.5.0",
+    "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
