--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,12 @@ before_script:
   - flow-typed install
 script:
   - travis_retry gulp test
+sudo: required
+dist: trusty
+addons:
+  firefox: "52.0"
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
