Add flag to exclude legacy support

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,8 @@
         "__MAJOR_VERSION__": true,
         "__FILE_NAME__": true,
         "__FILE_VERSION__": true,
-        "__DEFAULT_LOG_LEVEL__": true
+        "__DEFAULT_LOG_LEVEL__": true,
+        "__LEGACY_SUPPORT__": true
     },
 
     "fix": true,
