David-DM badges and devDependency updates. (#328)
Initial Mocha change for review

Fixed test and adjusted debug for chrome

Changes to support major (breaking) release between Mocha 2.x and 3.x

two more devdependency updates

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "type": "git",
     "url": "git://github.paypal.com/paypal/paypal-checkout.git"
   },
+  "homepage": "https://developer.paypal.com/",
   "keywords": [
     "cross-domain",
     "cross domain",
@@ -30,10 +31,10 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "babel-core": "^6.7.7",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.1.4",
-    "babel-plugin-flow-runtime": "^0.10.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-flow-runtime": "^0.11.1",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-decorators": "^6.13.0",
@@ -52,17 +53,17 @@
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^3.5.0",
     "del": "^2.2.2",
-    "eslint": "^2",
+    "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.29.1",
-    "flow-bin": "^0.44.2",
-    "flow-runtime": "^0.10.0",
+    "flow-bin": "^0.46.0",
+    "flow-runtime": "^0.11.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-flowtype": "^1.0.0",
     "gulp-webserver": "^0.9.1",
-    "istanbul-instrumenter-loader": "^0.2.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "karma": "^1.5.0",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-commonjs": "^1.0.0",
     "karma-coverage": "^1.0.0",
     "karma-firefox-launcher": "^1.0.0",
@@ -73,21 +74,21 @@
     "karma-sinon-chai": "^1.2.0",
     "karma-slimerjs-launcher": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
     "lolex": "^1.5.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.4.0",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "regenerator-runtime": "^0.10.1",
-    "sinon": "^1.17.4",
+    "sinon": "^2.2.0",
     "sinon-chai": "^2.8.0",
     "text-loader": "0.0.1",
-    "uglify-js": "^2.8.13",
-    "uglifyjs-webpack-plugin": "^0.3.0",
+    "uglify-js": "^3.0.5",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.2.1",
     "webpack-stream": "^3.2.0",
-    "yargs": "^4.7.1"
+    "yargs": "^8.0.1"
   },
   "dependencies": {
     "Base64": "^1.0.0",
