Use latest cross-domain-utils on publish

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^3.5.0",
+    "cross-domain-utils": "^1.0.4",
     "del": "^2.2.2",
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.29.1",
