--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-flow-runtime": "^0.11.1",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-for-of": "^6.8.0",
@@ -96,6 +97,7 @@
     "Base64": "^1.0.0",
     "beaver-logger": "^3",
     "post-robot": "^6.0.0",
-    "xcomponent": "^2.0.0"
+    "xcomponent": "^2.0.0",
+    "zalgo-promise": "^1.0.3"
   }
 }
