--- a/.babelrc
+++ b/.babelrc
@@ -23,6 +23,7 @@
         [ "transform-es3-property-literals", { "loose": true } ],
         [ "transform-es3-member-expression-literals", { "loose": true } ],
         [ "transform-decorators-legacy", { "loose": true } ],
-        [ "transform-es2015-for-of", { "loose": true } ]
+        [ "transform-es2015-for-of", { "loose": true } ],
+        [ "babel-plugin-transform-react-jsx", { "pragma": "jsxDom" } ]
     ]
 }
