--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.22.0",
     "babel-preset-env": "^1.5.2",
@@ -99,7 +100,7 @@
     "Base64": "^1.0.0",
     "beaver-logger": "^3.0.6",
     "post-robot": "^7.0.1",
-    "xcomponent": "^2.0.60",
+    "xcomponent": "^3.0.0",
     "zalgo-promise": "^1.0.10"
   }
 }
