Use bowser for browser detection

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   "dependencies": {
     "Base64": "^1.0.0",
     "beaver-logger": "^3.0.6",
+    "bowser": "^1.7.1",
     "post-robot": "^7.0.1",
     "xcomponent": "^3.0.0",
     "zalgo-promise": "^1.0.10"
