Upgrade build dependencies

--- a/package.json
+++ b/package.json
@@ -54,18 +54,19 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "chai": "^3.5.0",
+    "chai": "^4.1.1",
     "cross-domain-utils": "^1.0.4",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
+    "del": "^3.0.0",
+    "eslint": "^4.5.0",
     "eslint-plugin-flowtype": "^2.29.1",
-    "flow-bin": "^0.52.0",
-    "flow-runtime": "^0.11.1",
+    "flow-bin": "^0.53.1",
+    "flow-runtime": "^0.14.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-flowtype": "^1.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-webserver": "^0.9.1",
-    "istanbul-instrumenter-loader": "^2.0.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-commonjs": "^1.0.0",
@@ -80,20 +81,20 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
-    "lolex": "^1.5.0",
+    "lolex": "^2.1.2",
     "mocha": "^3.4.0",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
-    "regenerator-runtime": "^0.10.1",
+    "regenerator-runtime": "^0.11.0",
     "serve": "^6.0.2",
-    "sinon": "^2.3.5",
+    "sinon": "^3.2.1",
     "sinon-chai": "^2.11.0",
     "sync-browser-mocks": "^1.0.43",
     "text-loader": "0.0.1",
-    "uglify-js": "^2.8.29",
+    "uglify-js": "^3.0.28",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.0.0",
-    "webpack-stream": "^3.2.0",
+    "webpack-stream": "^4.0.0",
     "yargs": "^8.0.2"
   },
   "dependencies": {
