--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "eslint-plugin-compat": "^1.0.4",
     "eslint-plugin-eslint-comments": "^1.0.3",
     "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
