--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^2.1.2",
     "flow-bin": "^0.56.0",
