--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "beaver-logger": "^3.0.6",
     "bowser": "^1.7.1",
     "cross-domain-utils": "^2.0.1",
+    "hi-base32": "^0.3.0",
     "post-robot": "^8.0.0",
     "xcomponent": "^6.0.0",
     "zalgo-promise": "^1.0.10"
