Integrate with braintree-paypal-client-config

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^4.1.1",
     "circular-dependency-plugin": "^4.1.0",
+    "cross-env": "^5.1.1",
     "del": "^3.0.0",
     "eslint": "^4.5.0",
     "eslint-find-rules": "^3.1.1",
@@ -83,6 +84,7 @@
     "eslint-plugin-unicorn": "^2.1.2",
     "flow-bin": "0.56.0",
     "flow-runtime": "^0.14.0",
+    "flow-typed": "^2.2.3",
     "fs-extra": "^4.0.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
@@ -132,6 +134,7 @@
     "Base64": "^1.0.0",
     "beaver-logger": "^3.0.6",
     "bowser": "^1.7.1",
+    "braintree-paypal-client-config": "^1.0.2",
     "cross-domain-utils": "^2.0.1",
     "hi-base32": "^0.3.0",
     "post-robot": "^8.0.0",
