--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "description": "PayPal Checkout components, for integrating checkout products.",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test",
-    "postinstall": "node postinstall.js",
-    "reinstall": "rm -rf node_modules flow-typed && npm install && flow-typed install",
+    "lint": "eslint src/ test/",
+    "flow-typed": "flow-typed install",
+    "flow": "flow",
+    "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
+    "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
+    "babel": "babel src/ --out-dir dist/module",
+    "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
+    "test": "npm run lint && npm run flow && npm run karma && npm run buttondiff",
+    "build": "npm run test && npm run babel && npm run webpack && npm run flow:build",
+    "release": "./publish.sh",
+    "release:patch": "./publish.sh patch",
+    "release:minor": "./publish.sh minor",
+    "release:major": "./publish.sh major",
+    "clean": "rimraf dist coverage",
+    "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
+    "postinstall": "flow-typed install",
+    "debug": "cross-env NODE_ENV=debug",
     "demo": "serve ./demo --port 1337",
     "eslint-find-rules": "eslint-find-rules --current .eslintrc.js --unused --plugin",
     "buttondiff": "jest test/screenshot/screenshot.test.js "
@@ -87,11 +101,6 @@
     "flow-runtime": "^0.14.0",
     "flow-typed": "^2.2.3",
     "fs-extra": "^4.0.2",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.0",
-    "gulp-flowtype": "^1.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-webserver": "^0.9.1",
     "ifdef-loader": "^2.0.3",
     "imagemagick": "^0.1.3",
     "imgur": "^0.2.1",
