--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir dist/module",
-    "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --progress",
+    "webpack": "babel-node ./node_modules/.bin/webpack --progress",
+    "webpack-base": "babel-node ./node_modules/.bin/webpack --progress --config webpack.base.config.js",
     "test": "npm run lint && npm run flow && npm run karma && npm run buttondiff",
     "build": "npm run test && npm run babel && npm run webpack && npm run flow:build",
     "release": "./publish.sh",
