--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "license": "Apache-2.0",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.0.2",
