--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack": "babel-node ./node_modules/.bin/webpack --progress",
     "webpack-base": "babel-node ./node_modules/.bin/webpack --progress --config webpack.base.config.js",
     "test": "npm run lint && npm run flow && npm run karma && npm run buttondiff",
-    "build": "npm run test && npm run babel && npm run webpack && npm run flow:build",
+    "build": "npm run test && npm run webpack",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
     "release:minor": "./publish.sh minor",
