--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "uglify-js": "^3.0.28",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.0.0",
+    "webpack-promise-shim-plugin": "^1.0.0",
     "webpack-stream": "^4.0.0",
     "yargs": "^9.0.1"
   },
