Fail earlier for any button diff errors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "webpack": "babel-node ./node_modules/.bin/webpack --progress",
     "webpack-base": "babel-node ./node_modules/.bin/webpack --progress --config webpack.base.config.js",
     "webpack-button": "babel-node ./node_modules/.bin/webpack --progress --config webpack.button.config.js",
-    "test": "npm run lint && npm run flow && npm run karma && npm run buttondiff",
+    "test": "npm run lint && npm run flow && npm run buttondiff && npm run karma",
     "build": "npm run test && npm run webpack",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
