--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "8.2.1",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
