--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PayPal Checkout components, for integrating checkout products.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --ext .js --ext .jsx src/ test/",
+    "lint": "eslint --ext .js --ext .jsx src/ test/ *.js",
     "flow-typed": "flow-typed install",
     "flow": "flow",
     "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
@@ -24,7 +24,7 @@
     "debug": "cross-env NODE_ENV=debug",
     "demo": "serve ./demo --port 1337",
     "eslint-find-rules": "eslint-find-rules --current .eslintrc.js --unused --plugin",
-    "buttondiff": "jest test/screenshot/screenshot.test.js",
+    "buttondiff": "jest test/screenshot/screenshot.test.js --env=node",
     "test-ssr": "jest test/ssr/ssr.test.js --env=node"
   },
   "files": [
@@ -33,7 +33,8 @@
     "dist/checkout.button.render.js",
     "dist/checkout.button.render.js.map",
     "src/",
-    "__sdk__.js"
+    "__sdk__.js",
+    "globals.js"
   ],
   "browserslist": [
     "IE >= 9",
@@ -58,88 +59,17 @@
   "license": "Apache-2.0",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "8.2.1",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.11.1",
-    "babel-plugin-istanbul": "^4.0.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-for-of": "^6.8.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.5.0",
-    "babel-plugin-transform-es3-property-literals": "^6.5.0",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "chai": "^4.1.1",
-    "circular-dependency-plugin": "^4.1.0",
-    "cross-env": "^5.1.1",
-    "del": "^3.0.0",
-    "eslint": "^4.5.0",
-    "eslint-find-rules": "^3.1.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-plugin-compat": "^1.0.0",
-    "eslint-plugin-const-immutable": "^2.0.0",
-    "eslint-plugin-eslint-comments": "^1.0.3",
-    "eslint-plugin-flowtype": "^2.29.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^2.1.2",
     "flow-bin": "^0.70.0",
-    "flow-runtime": "^0.14.0",
-    "flow-typed": "^2.2.3",
     "fs-extra": "^4.0.2",
-    "ifdef-loader": "^2.0.3",
+    "grumbler-scripts": "^2.0.24",
     "imagemagick": "^0.1.3",
     "imgur": "^0.2.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jest": "^21.1.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-commonjs": "^1.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.31",
-    "karma-webpack": "^2.0.3",
-    "lolex": "^2.1.2",
     "memory-fs": "^0.4.1",
-    "mocha": "^3.4.0",
+    "mocha": "^3.5.3",
     "pixelmatch": "^4.0.2",
     "pngjs": "^3.3.0",
     "puppeteer": "^0.11.0",
-    "raw-loader": "^0.5.1",
-    "regenerator-runtime": "^0.11.0",
-    "serve": "^6.0.2",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.11.0",
-    "sync-browser-mocks": "^1.0.43",
-    "text-loader": "0.0.1",
-    "uglify-js": "^3.0.28",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.0.0",
-    "webpack-promise-shim-plugin": "^1.0.0",
-    "webpack-stream": "^4.0.0",
-    "yargs": "^9.0.1"
+    "sync-browser-mocks": "^1.0.43"
   },
   "dependencies": {
     "Base64": "^1.0.0",
