--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,8 @@
 [ignore]
 .*/node_modules/babel-plugin-flow-runtime
 .*/node_modules/flow-runtime
+.*/node_modules/npm
 .*/node_modules/**/test
-.*/dist/module
 .*/dist/module
 [include]
 [libs]
@@ -10,6 +10,7 @@ flow-typed
 src/declarations.js
 test/declarations.js
 node_modules/xcomponent/src/declarations.js
+node_modules/post-robot/src/declarations.js
 node_modules/paypal-braintree-web-client/src/declarations.js
 [options]
 module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
