--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "Base64": "^1.0.0",
     "beaver-logger": "^3.0.6",
+    "belter": "^1.0.2",
     "bowser": "^1.7.1",
     "cross-domain-utils": "^2.0.1",
     "hi-base32": "^0.5.0",
