Upgrade client, use es6 exports for public interface, global getters

--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
     "bowser": "^1.7.1",
     "cross-domain-utils": "^2.0.1",
     "hi-base32": "^0.5.0",
-    "paypal-braintree-web-client": "^3",
+    "paypal-braintree-web-client": "^4.0.0",
     "post-robot": "^8.0.0",
-    "zoid": "^7.0.0",
-    "zalgo-promise": "^1.0.10"
+    "zalgo-promise": "^1.0.10",
+    "zoid": "^7.0.0"
   }
 }
