--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "bowser": "^1.7.1",
     "cross-domain-utils": "^2.0.1",
     "hi-base32": "^0.5.0",
+    "jsx-pragmatic": "^1.0.4",
     "paypal-braintree-web-client": "^4.0.0",
     "paypal-sdk-constants": "^1.0.1",
     "post-robot": "^9.0.0",
