Update to use paypal namespace

--- a/.flowconfig
+++ b/.flowconfig
@@ -11,7 +11,7 @@ flow-typed
 node_modules/grumbler-scripts/declarations.js
 node_modules/zoid/src/declarations.js
 node_modules/post-robot/src/declarations.js
-node_modules/paypal-braintree-web-client/src/declarations.js
+node_modules/@paypal/sdk-client/src/declarations.js
 src/declarations.js
 test/declarations.js
 [options]
